--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -48,22 +48,23 @@ header nav ul li a {
     font-size: 1.55vw;
 }
 
+/*apply styles to footer*/
 footer {
     background: #fce138;
     width: 100%;
     padding: 40px 35px;
-
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
 
 footer h2 {
-    display: inline;
     color: #024e76;
     font-size: 30px;
     margin: 0;
 }
 
 footer div {
-    float: right;
     line-height: 1.5;
     text-align: right;
 }
