add flexbox to what-we-do section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -145,9 +145,6 @@ section {
 /* Hero Style End */
 
 /* What We Do & Steps Style Start */
-.intro {
-    text-align: center;
-}
 
 .intro p {
     line-height: 1.7;
@@ -155,11 +152,12 @@ section {
     width: 80%;
     font-size: 20px;
     margin: 0 auto;
+    text-align: center;
 }
 
 .steps {
-    text-align: center;
     background: #fce138;
+    
 }
 
 
@@ -167,10 +165,11 @@ section {
 .section-title {
     font-size: 55px;
     color: #024e76;
-    margin-bottom: 35px;
-    padding: 0 100px 20px 100px;
-    display: inline-block;
     border-bottom: 3px solid;
+    padding-bottom: 20px;
+    text-align: center;
+    margin: 0 auto 35px auto;
+    width: 50%;
 }
 
 .primary-border {
@@ -206,9 +205,7 @@ section {
  }
 
  /* Trainers Style Start */
- .trainers {
-     text-align: center;
- }
+ 
 
  .trainer {
      width: 900px;
@@ -229,13 +226,7 @@ section {
      width: 65%;
  }
 
- .text-left{
-     text-align: left;
- }
-
- .text-right{
-     text-align: right;
- }
+ 
 
  .trainer-bio h3 {
      font-size: 32px;
@@ -257,7 +248,7 @@ section {
 
  /* Reach Out Styles Start */
  .contact {
-     text-align: center;
+     
      background: #024e76;
  }
 
@@ -307,3 +298,15 @@ section {
      font-size: 42px;
      font-style: italic;
  }
+
+ .text-left{
+    text-align: left;
+}
+
+.text-right{
+    text-align: right;
+}
+
+.flex-row {
+    display:flex;
+}
