--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,187 +1,228 @@
 * {
+    box-sizing: border-box;
     margin: 0;
     padding: 0;
-    box-sizing: border-box;
   }
-
-body {
+  
+  body {
     color: #39a6b2;
     font-family: Helvetica, Arial, sans-serif;
   }
-
- /* apply styles to <header> */ 
-header {
+  
+  
+  /* HEADER / NAV BAR STYLES START */
+  
+  header {
     padding: 20px 35px;
     background-color: #39a6b2;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
+    position: sticky;
+    position: -webkit-sticky;
+    top: 0;
+    background-image: url("../images/hero-bg.jpg");
+    background-size: cover;
+    background-attachment: fixed;
+    background-position: 80%;
   }
-
-header h1 {
+  
+  header h1 {
     font-weight: bold;
+    margin: 0;
     font-size: 36px;
     color: #fce138;
-    margin: 0;
-    }
-
-header a {
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  header a {
     text-decoration: none;
     color: #fce138;
-    }
-
-header nav {
-        margin: 7px 0;
-}
-
-header nav ul {
+  }
+  
+  header nav {
+    margin: 7px 0;
+  }
+  
+  header nav ul {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
     list-style: none;
-}
-
-header nav ul li a {
-    padding: 10 15px;
+  }
+  
+  header nav ul li a {
+    padding: 10px 15px;
     font-weight: lighter;
     font-size: 1.55vw;
-}
-
-/*apply styles to footer*/
-footer {
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  header nav ul li a:hover {
     background: #fce138;
-    width: 100%;
+    color: #024e76;
+    border-radius: 15px;
+    text-shadow: none;
+  }
+  
+  /* HEADER / NAVBAR STYLES END */
+  
+  
+  
+  /* FOOTER STYLES START */
+  footer {
+    background: #fce138;
     padding: 40px 35px;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-}
-
-footer h2 {
+    width: 100%;
+  }
+  
+  footer h2 {
     color: #024e76;
     font-size: 30px;
     margin: 0;
-}
-
-footer div {
+  }
+  
+  footer div {
     line-height: 1.5;
     text-align: right;
-}
-
-footer a {
+  }
+  
+  footer a {
     color: #024e76;
-}
-
-section {
+  }
+  /* END FOOTER STYLES */
+  
+  /* STYLE ALL SECTION TAGS */
+  section {
     padding: 60px;
-    }
-
-/* Hero Style Start */
-.hero {
-    background-image: url("../images/hero-bg.jpg");
+  }
+  
+  /* HERO STYLES START */
+  .hero {
+    background-image: url('../images/hero-bg.jpg');
     background-size: cover;
-    background-position: center;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     align-items: flex-start;
-}
-
-.hero-cta {
+    background-attachment: fixed;
+    background-position: 80%;
+  }
+  
+  .hero-cta {
     width: 35%;
     text-align: right;
     margin: 3.5%;
     color: #fff;
     font-size: 18px;
     line-height: 1.2;
-}
-
-.hero-cta h2{
+  }
+  
+  .hero-cta h2 {
     font-style: italic;
     font-size: 55px;
-    color:#fce138;
-}
-
-.hero-form {
-    background-color: #fce138;
+    color: #fce138;
+    text-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  .hero-form {
     border: 3px solid #024e76;
+    background-color: rgba(255, 225, 56, 0.8);
     padding: 20px;
     color: #024e76;
     width: 40%;
     margin: 3.5%;
-}
-
-.hero-form h3 {
+    border-radius: 15px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+  }
+  
+  .hero-form button:hover {
+    background-color: #39a6b2;  
+  }
+  
+  .hero-form h3 {
     font-size: 24px;
-    margin: 0px;
-}
-
-.hero-form p {
-    margin: 5px 0px 15px 0px;
-}
-
-.form-input {
+    margin: 0;
+  }
+  .hero-form p {
+    margin: 5px 0 15px 0;
+  }
+  
+  .form-input {
     border: 1px solid #024e76;
     display: block;
     padding: 7px 15px;
     font-size: 16px;
     color: #024e76;
     width: 100%;
-    margin-bottom: 15px;
-}
-
-.hero-form label {
-    margin: 0px 5px;
-}
-
-.hero-form button{
+    margin-bottom: 15px; 
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+  }
+  
+  .form-input:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+  }
+  
+  .hero-form label {
+    margin: 0 5px;
+  }
+  
+  .hero-form button {
+    color: #fce138;
     background-color: #024e76;
-    color:#fce138;
     border: none;
     padding: 10px 20px;
-    font-size: 16;
-
-}
-/* Hero Style End */
-
-/* What We Do & Steps Style Start */
-
-.intro p {
-    line-height: 1.7;
-    color: #39a6b2;
-    width: 80%;
-    font-size: 20px;
-    margin: 0 auto;
-    text-align: center;
-}
-
-.steps {
-    background: #fce138;
-    
-}
-
-
-
-.section-title {
+    font-size: 16px;
+    border-radius: 10px;
+  } 
+  /* HERO STYLES END */
+  
+  
+  /* SECTION TITLE STYLES START */
+  .section-title {
     font-size: 48px;
-    color: #024e76;
     border-bottom: 3px solid;
+    color: #024e76;
     padding-bottom: 20px;
     text-align: center;
     margin: 0 auto 35px auto;
     width: 50%;
-}
-
-.primary-border {
+  }
+  
+  .primary-border {
     border-color: #fce138;
-}
-
-.secondary-border {
+  }
+  
+  .secondary-border {
     border-color: #39a6b2;
-}
-
-.step {
+  }
+  /* SECTION TITLE STYLES END */
+  
+  /* WHAT WE DO STYLES */
+  
+  .intro p {
+    line-height: 1.7;
+    color: #39a6b2;
+    width: 80%;
+    margin: 0 auto;
+    font-size: 20px;
+    text-align: center;
+  }
+  /* WHAT YOU DO STYLES END */
+  
+  
+  /* WHAT YOU DO STYLES START */
+  .steps { 
+    background: #fce138;
+  }
+  
+  .step {
     margin: 50px auto;
     padding-bottom: 50px;
     width: 80%;
@@ -190,289 +231,291 @@ section {
     flex-wrap: wrap;
     align-items: center;
     justify-content: space-between;
-}
-
- 
-
- .step h3 {
-     color: #024e76;
-     font-size: 46px;
-     flex: 1 30%;
- }
-
- .step-info {
-     flex: 2 70%;
-     display: flex;
-     flex-wrap: wrap;
-     align-items: center;
- }
-
- .step-text{
-     flex: 12;
- }
-
- .step-text p {
-     color: #39a6b2;
-     font-size: 18px;
- }
-
- .step-text h4 {
-     font-size: 26px;
-     line-height: 1.5;
-     color: #024e76;
- }
-
- .step-img {
-     flex: 1 12%;
-     margin-right: 20px;
- }
-
- .step-img img{
-     max-width: 100%;
- }
-
- /* Trainers Style Start */
- 
-.trainers {
+  }
+  
+  .step:last-child {
+    border-bottom: none;
+  }
+  
+  .step h3 {
+    color: #024e76;
+    font-size: 46px;
+    flex: 1 30%;
+  }
+  
+  .step-info {
+    flex: 2 70%;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+  }
+  
+  .step-img {
+    flex: 1 12%;
+    margin-right: 20px;
+  }
+  
+  .step-img img {
+    max-width: 100%;
+  }
+  
+  .step-text {
+    flex: 12;
+  }
+  
+  .step-text p {
+    color: #39a6b2;
+    font-size: 18px;
+  }
+  
+  .step-text h4 {
+    font-size: 26px;
+    line-height: 1.5;
+    color: #024e76;
+  }
+  /* WHAT YOU DO STYLES END */
+  
+  /* MEET THE TRAINERS START */
+  .trainers {
     width: 100%;
-    margin:0 auto;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-around;
-}
-
- .trainer {
-     margin: 20px;
-     background: #024e76;
-     color: #fce138;
-     flex: 1;
-     
- }
-
- .trainer img {
-     width: 100%;
-      }
-
- .trainer-bio {
-     padding: 25px;
-     line-height: 1.3;
- }
-
- 
-
- .trainer-bio h3 {
-     font-size: 28px;
- }
-
- .trainer-bio h4{
-     font-weight: lighter;
-     font-size: 22px;
-     margin-bottom: 15px;
- }
-
- .trainer-bio p {
-     font-size: 17px;
-     
- }
-
- /* Trainer style stops */
-
- /* Reach Out Styles Start */
- .contact {
-     
-     background: #024e76;
- }
-
- .contact h2 {
-     color:#fce138;
- }
-
- .contact-info {
-     display: flex;
-     justify-content: space-between;
-     flex-wrap: wrap;
- }
-
- .contact-info > * {
-     flex: 1;
-     margin: 15px;
- }
-
- .contact-info iframe {
-     height: 400px;
- }
-
- .contact-info div {
-     color: white;
- }
-
- .contact-info h3 {
-     color: #fce138;
-     font-size: 32px;
- }
-
- .contact-info p, .contact-info address {
-     margin: 20px 0;
-     line-height: 1.5;
-     font-size: 16px;
-     font-style: normal;
- }
-
- .contact-info a {
-     color: #fce138;
- }
-
- .contact-form input, .contact-form textarea {
-     border: 1px solid #024e76;
-     display: block;
-     padding: 7px 15px;
-     font-size: 16px;
-     color: #024e76;
-     width: 100%;
-     margin-bottom: 15px;
-     margin-top: 5px;
- }
-
- .contact-form button {
-     width: 100%;
-     border: none;
-     background: #fce138;
-     color: #024e76;
-     text-align: center;
-     padding: 15px 0;
-     font-size: 16px;
- }
- /* Reach Out Styles End */
-
- /* Privacy Policy Page Page Title Style*/
- .page-title{
-     color:#fce138;
-     display:inline-block;
-     border-bottom: 4px solid #fce138;
-     padding: 0 80px 15px 80px;
-     font-weight: normal;
-     font-size: 42px;
-     font-style: italic;
- }
-
- .text-left{
-    text-align: left;
-}
-
-.text-right{
-    text-align: right;
-}
-
-.flex-row {
+  }
+  
+  .trainer {
+    margin: 20px;
+    flex: 1;
+    background: #024e76;
+    color: #fce138;
+  }
+  
+  .trainer img {
+    width: 100%;
+  }
+  
+  .trainer-bio {
+    padding: 25px;
+    line-height: 1.3;
+  }
+  
+  .trainer-bio h3 {
+    font-size: 28px;
+  }
+  
+  .trainer-bio h4 {
+    font-weight: lighter;
+    font-size: 22px;
+    margin-bottom: 15px;
+  }
+  
+  .trainer-bio p {
+    font-size: 17px;
+  }
+  /* TRAINER STYLES END */
+  
+  /* REACH OUT STYLES START */
+  .contact {
+    background: #024e76;
+  }
+  
+  .contact h2 {
+    color: #fce138;
+  }
+  
+  .contact-info {
     display: flex;
-}
-
-/* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
-@media screen and  (max-width: 980px) {
+    justify-content: space-between;
+    flex-wrap: wrap;
+  }
+  
+  .contact-info > * {
+    flex: 1;
+    margin: 15px;
+  }
+  
+  .contact-info iframe {
+    height: 400px;
+  }
+  
+  .contact-info div {
+    color: white;
+  }
+  
+  .contact-info h3 {
+    color: #fce138;
+    font-size: 32px;
+  }
+  
+  .contact-info p, .contact-info address {
+    margin: 20px 0;
+    line-height: 1.5;
+    font-size: 16px;
+    font-style: normal;
+  }
+  
+  .contact-form input, .contact-form textarea {
+    border: 1px solid #024e76;
+    display: block;
+    padding: 7px 15px;
+    font-size: 16px;
+    color: #024e76;
+    width: 100%;
+    margin-bottom: 15px;
+    margin-top: 5px;
+    border-radius: 10px;
+    background-color: rgba(255,255,255, 0.75);
+  }
+  
+  .contact-form input:focus, .contact-form textarea:focus {
+    background-color: rgba(255,255,255, 1);
+    outline: none;
+  }
+  
+  .contact-form button {
+    width: 100%;
+    border: none;
+    background: #fce138;
+    color: #024e76;
+    text-align: center;
+    padding: 15px 0;
+    font-size: 16px;
+    border-radius: 10px;
+  }
+  
+  .contact-form button:hover {
+    color: #fce138;
+    background: #39a6b2;
+  }
+  
+  .contact-info a {
+    color: #fce138;
+  }
+  /* REACH OUT STYLES END */
+  
+  /* UTILITIES */
+  .text-left {
+    text-align: left;
+  }
+  
+  .text-right {
+    text-align: right;
+  }
+  
+  .flex-row {
+    display: flex;
+  }
+  
+  /* MEDIA QUERY FOR SMALLER DESKTOP SCREENS AND SMALLER */
+  @media screen and (max-width: 980px) {
     header {
-        padding-bottom: 0;
-        justify-content: center;
-      }
+      padding-bottom: 0;
+      justify-content: center;
+      position: relative;
+    }
+  
+    header h1 {
+      width: 100%;
+      text-align: center;
+    }
+  
+    header nav ul {
+      margin-top: 20px;
+      width: 100%;
+      justify-content: center;
+    }
+  
+    header nav ul li a {
+      font-size: 20px;
+    }
+  
+    footer h2, footer div {
+      text-align: center;
+      width: 100%;
+    }
+  
+    .hero-cta, .hero-form {
+      width: 100%;
+    }
     
-      header h1 {
-        width: 100%;
-        text-align: center;
-      }
+    .hero-cta {
+      text-align: center;
+    }
+  
+    .section-title {
+      width: 80%;
+    }
     
-      header nav ul {
-        margin-top: 20px;
-        width: 100%;
-        justify-content: center;
-      }
+    .trainer {
+      flex: 0 70%;
+    }
     
-      header nav ul li a {
-        font-size: 20px;
-      }
-    
-      footer h2, footer div {
-        text-align: center;
-        width: 100%;
-      }
-
-      .hero-cta, .hero-form {
-        width: 100%;
-      }
-      
-      .hero-cta {
-        text-align: center;
-      }
-
-      .section-title {
-        width: 80%;
-      }
-      
-      .trainer {
-        flex: 0 70%;
-      }
-      
-      .contact-info iframe{
-        flex: 1 100%;
-      }
-}
-
-/* MEDIA QUERY FOR TABLETS AND SMALLER */
-@media screen and (max-width: 768px) {
+    .contact-info iframe{
+      flex: 1 100%;
+    }
+  }
+  
+  /* MEDIA QUERY FOR TABLETS AND SMALLER */
+  @media screen and (max-width: 768px) {
     section {
-        padding: 30px 15px;
-      }
-      .step h3 {
-        flex: 1 100%;
-        text-align: center;
-      }
-    
-      .step-info {
-        flex: 2 100%;
-        text-align: center;
-        justify-content: center;
-      }
-    
-      .step-img {
-        flex: 0 32%;
-        margin-right: 0;
-        margin-top: 15px;
-        margin-bottom: 15px;
-      }
-    
-      .step-text {
-        flex: 100%;  
-      }
-    
-    
-}
-
-/* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
-@media screen and (max-width: 575px) {
+      padding: 30px 15px;
+    }
+  
+    .step h3 {
+      flex: 1 100%;
+      text-align: center;
+    }
+  
+    .step-info {
+      flex: 2 100%;
+      text-align: center;
+      justify-content: center;
+    }
+  
+    .step-img {
+      flex: 0 32%;
+      margin-right: 0;
+      margin-top: 15px;
+      margin-bottom: 15px;
+    }
+  
+    .step-text {
+      flex: 100%;  
+    }
+  
+    .trainer-bio h3, .trainer-bio h4 {
+      display: block;
+    }
+  }
+  
+  /* MEDIA QUERY FOR MOBILE PHONES AND SMALLER */
+  @media screen and (max-width: 575px) {
     .hero-form button {
-        width: 100%;
-      }
-    
-      .section-title {
-        width: 95%;
-      }
-    
-      .intro p {
-        width: 100%;
-      }
-    
-      .trainer {
-        flex: 0 100%;
-      }
-    
-      .contact-info {
-        text-align: center;
-      }
-    
-      .contact-info > * {
-        flex: 0 100%;
-      }
-
-      .contact-form {
-        order: 3;
-      }
-    
-}
+      width: 100%;
+    }
+  
+    .section-title {
+      width: 95%;
+    }
+  
+    .intro p {
+      width: 100%;
+    }
+  
+    .trainer {
+      flex: 0 100%;
+    }
+  
+    .contact-info {
+      text-align: center;
+    }
+  
+    .contact-info > * {
+      flex: 0 100%;
+    }
+  
+    .contact-form {
+      order: 3;
+    }
+  }
